force-app/main/default/objects/Student__c/fields/csedesc__c.field-meta.xml
<CustomField>
    <fullName>csedesc__c</fullName>
    <externalId>true</externalId>
    <label>CSE Desc</label>
    <length>40</length>
    <type>Text</type>
</CustomField>