force-app/main/default/objects/Student__c/fields/ecedesc__c.field-meta.xml
<CustomField>
    <fullName>ecedesc__c</fullName>
    <externalId>true</externalId>
    <label>ECE Desc</label>
    <length>40</length>
    <type>Text</type>
</CustomField>