force-app/main/default/objects/Student__c/fields/eeedesc__c.field-meta.xml
<CustomField>
    <fullName>eeedesc__c</fullName>
    <externalId>true</externalId>
    <label>EEE Desc</label>
    <length>40</length>
    <type>Text</type>
</CustomField>