force-app/main/default/objects/Student__c/fields/itdesc__c.field-meta.xml
<CustomField>
    <fullName>itdesc__c</fullName>
    <externalId>true</externalId>
    <label>IT Desc</label>
    <length>40</length>
    <type>Text</type>
</CustomField>