force-app/main/default/objects/Student__c/fields/Subjects__c.field-meta.xml
<CustomField>
    <fullName>Subjects__c</fullName>
    <label>Subjects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECE - 1</fullName>
            </value>
            <value>
                <fullName>ECE - 2</fullName>
            </value>
            <value>
                <fullName>ECE - 3</fullName>
            </value>
            <value>
                <fullName>ECE - 4</fullName>
            </value>
            <value>
                <fullName>EEE - 1</fullName>
            </value>
            <value>
                <fullName>EEE - 2</fullName>
            </value>
            <value>
                <fullName>CSE - 1</fullName>
            </value>
            <value>
                <fullName>CSE - 2</fullName>
            </value>
            <value>
                <fullName>CSE - 3</fullName>
            </value>
            <value>
                <fullName>CSE - 4</fullName>
            </value>
            <value>
                <fullName>IT - 1</fullName>
            </value>
            <value>
                <fullName>IT - 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>